--- a/quizz.html
+++ b/quizz.html
@@ -10,26 +10,26 @@
   <body>
     <div class="quiz-container">
       <div class="question-header">
-        <h2>Qustions</h2>
+        <h2 id="question">Qustions</h2>
         <ul>
           <li>
             <input type="radio" id="a" name="answer" />
-            <label for="a">Question</label>
+            <label id="a_text" for="a">Question</label>
           </li>
           <li>
             <input type="radio" id="b" name="answer" />
-            <label for="b">Question</label>
+            <label id="b_text" for="b">Question</label>
           </li>
           <li>
             <input type="radio" id="c" name="answer" />
-            <label for="c">Question</label>
+            <label id="c_text" for="c">Question</label>
           </li>
           <li>
             <input type="radio" id="d" name="answer" />
-            <label for="d">Question</label>
+            <label id="d_text" for="d">Question</label>
           </li>
         </ul>
-        <button>Submit</button>
+        <button id="submit">Submit</button>
       </div>
     </div>
   </body>
