--- a/quizz.html
+++ b/quizz.html
@@ -5,27 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>quizApp</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="App.js"></script>
+    <script src="App.js" defer></script>
   </head>
   <body>
-    <div class="quiz-container">
+    <div class="quiz-container" id="quiz">
       <div class="question-header">
         <h2 id="question">Qustions</h2>
         <ul>
           <li>
-            <input type="radio" id="a" name="answer" />
+            <input type="radio" id="a" name="answer" class="answer" />
             <label id="a_text" for="a">Question</label>
           </li>
           <li>
-            <input type="radio" id="b" name="answer" />
+            <input type="radio" id="b" name="answer" class="answer" />
             <label id="b_text" for="b">Question</label>
           </li>
           <li>
-            <input type="radio" id="c" name="answer" />
+            <input type="radio" id="c" name="answer" class="answer" />
             <label id="c_text" for="c">Question</label>
           </li>
           <li>
-            <input type="radio" id="d" name="answer" />
+            <input type="radio" id="d" name="answer" class="answer" />
             <label id="d_text" for="d">Question</label>
           </li>
         </ul>
